<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_app"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/spacing_lg"
    android:paddingTop="40dp"
    android:paddingBottom="@dimen/spacing_2xl">

    <include
        android:id="@+id/toolbar"
        layout="@layout/layout_activity_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/spacing_xl">

        <TextView
            style="@style/TextAppearance.App.Display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coming_soon_emoji" />

        <TextView
            android:id="@+id/titleTextView"
            style="@style/TextAppearance.App.Heading1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_lg"
            android:gravity="center"
            android:text="@string/coming_soon_title" />

        <TextView
            style="@style/TextAppearance.App.BodySecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_md"
            android:gravity="center"
            android:text="@string/coming_soon_message" />
    </LinearLayout>
</LinearLayout>
